# cuda-convnet2

./: .gitignore  CMakeLists.txt  README.md  collect_stats.sh  convdata.py  convnet.py  layer.py  setup.py  shownet.py
cmake/: FindCBLAS.cmake  FindCUDA.cmake
cmake/FindCUDA/: run_nvcc.cmake
cudaconv3/: CMakeLists.txt
cudaconv3/include/: conv_util.cuh
cudaconv3/src/: conv_util.cu  filter_acts.cu  img_acts.cu  weight_acts.cu
cudaconvnet/: CMakeLists.txt
cudaconvnet/include/: copypipeline.cuh  layer.cuh  layer_kernels.cuh  pyconvnet.cuh  util.cuh  weights.cuh
cudaconvnet/src/: convnet.cu  layer.cu  layer_kernels.cu  pyconvnet.cu  util.cu  weights.cu
cudanet/: CMakeLists.txt  __init__.py  cudanet.py  test_cudanet.py
cudanet/include/: cudanetmat.cuh
cudanet/src/: cudanetmat.cu
layers/: layer-params-cifar10-11pct.cfg  layer-params-cifar10-urs.cfg  layer-params-gb.cfg  layer-params-imagenet-1gpu-data-qaw-noslide-w24.cfg  layer-params-imagenet-1gpu.cfg  layer-params-imagenet-4gpu-data.cfg  layer-params-nin-2gpu-data.cfg  layer-params-zizzer-4gpu-data.cfg  layers-cifar10-urs.cfg  layers-gb.cfg  layers-imagenet-1gpu-data.cfg  layers-imagenet-1gpu.cfg  layers-imagenet-2gpu-data-normed.cfg  layers-imagenet-4gpu-data.cfg  layers-nin-2gpu-data.cfg  layers-zizzer-4gpu-data.cfg
nvmatrix/: CMakeLists.txt
nvmatrix/include/: nvmatrix.cuh  nvmatrix_kernels.cuh  nvmatrix_operators.cuh
nvmatrix/src/: nvmatrix.cu  nvmatrix_kernels.cu
python_util/: gpumodel.py  options.py
util/: CMakeLists.txt
util/include/: matrix.h  matrix_funcs.h  thread.h
util/src/: matrix.cpp
